--- a/hosts.ini
+++ b/hosts.ini
@@ -1,5 +1,7 @@
 [g1]
-# amzn1 ansible_host=YOUR_AMAZON_IP ansible_user=ec2-user ansible_ssh_private_key_file=~/.ssh/YOUR_KEY.pem
+n1 ansible_host=172.31.23.107 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/jenkins-kps.pem
+n2 ansible_host=172.31.19.228 ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/jenkins-kps.pem
 
 [g2]
-# ubt1 ansible_host=YOUR_UBUNTU_IP ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/YOUR_KEY.pem
+n3 ansible_host=172.31.25.28  ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/jenkins-kps.pem
+n4 ansible_host=172.31.19.30  ansible_user=ec2-user ansible_ssh_private_key_file=/home/ec2-user/jenkins-kps.pem
